lingeringsound-host有误杀，已经剔除
Removed lingering sound host rule from the configuration.

--- a/config/application.yaml
+++ b/config/application.yaml
@@ -39,10 +39,6 @@ application:
 
     - name: '茯苓规则-允许列表'
       path: 'https://raw.githubusercontent.com/Kuroba-Sayuki/FuLing-AdRules/Master/FuLingRules/FuLingAllowList.txt'
-      type: easylist
-
-    - name: 'lingeringsound-host'
-      path: 'https://raw.githubusercontent.com/lingeringsound/10007_auto/master/adb.txt'
       type: easylist  
 
     - name: '217heidai'
@@ -58,7 +54,7 @@ application:
       Last Modified: ${date}
       Total Size: ${total}
       Homepage: https://github.com/chengzhouCR/AdBlock-Rules
-      Description: 自用的路由器去广告规则，规则较为精简，每日自动更新。上游规则源：AWAvenue Ads Rule、jiekouAD、halflife规则、不是DD啊、海哥规则、晴雅规则、茯苓规则、217heidai规则精简版、lingeringsound-host。
+      Description: 自用的路由器去广告规则，规则较为精简，每日自动更新。上游规则源：AWAvenue Ads Rule、jiekouAD、halflife规则、不是DD啊、海哥规则、晴雅规则、茯苓规则、217heidai规则精简版。
       
     files:
       - name: smartdns.conf    
