--- a/config/application.yaml
+++ b/config/application.yaml
@@ -54,7 +54,7 @@ application:
     #文件头配置，将自动作为注释添加至每个规则文件开始
     #可使用占位符 ${name}、${type}、${desc} 以及 ${date} (当前日期)、${total} (规则总数)
     file_header: |
-      ChengZhouCR AdBlock ${type}
+      AdBlock-Router ${type}
       Last Modified: ${date}
       Total Size: ${total}
       Homepage: https://github.com/chengzhouCR/AdBlock-Rules
